Update 'rj9v4cfov-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-09c1fbf925.odiq.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:b000c355b862fa995fe3041b838106f8de98dbeb@sha256:e4ce953c46dee6c1ecb51fec8e90424cbb46cf18cbe2a56c1384d17c77f02f54

--- a/components/rj9v4cfov-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/rj9v4cfov-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rj9v4cfov-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-09c1fbf925.odiq.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:b000c355b862fa995fe3041b838106f8de98dbeb@sha256:e4ce953c46dee6c1ecb51fec8e90424cbb46cf18cbe2a56c1384d17c77f02f54
+          name: container-image
